<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EuConfio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações da conta</string>
    <string name="welcome">Bem-vindo ao EuConfio</string>
    <string name="phone">TELEFONE</string>
    <string name="password">SENHA</string>
    <string name="sing_in">ENTRAR</string>
    <string name="sing_up">CADASTRAR</string>
    <string name="name">NOME</string>
    <string name="email">E-MAIL</string>
    <string name="user">Usuário</string>
    <string name="edit_account">Edite seus dados</string>
    <string name="create_account">CRIAR CONTA</string>
    <string name="save">SALVAR</string>
    <string name="save_captalize">Salvar</string>
    <string name="search">PESQUISAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="cancel_captalize">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="loading">Carregando</string>
    <string name="update">ATUALIZAR</string>
    <string name="delete">DELETAR</string>
    <string name="current_password">Senha atual</string>
    <string name="new_password">NOVA SENHA</string>
    <string name="textPassword">Edit</string>
    <string name="confirm_password">CONFIRME A SENHA</string>
    <string name="message">Mensagem</string>
    <string name="description">DESCRIÇÃO</string>
    <string name="tags">PALAVRAS CHAVES</string>
    <string name="city">Cidade</string>
    <string name="mainPhone">Telefone principal</string>
    <string name="edit_service">Editar serviço</string>
    <string name="address">ENDEREÇO</string>
    <string name="reference">COMPLEMENTO/REFERÊNCIA</string>
    <string name="information_service">Informações do serviço</string>
    <string name="information_user">Informações do usuário</string>
    <string name="location_question">Onde você está?</string>
    <string name="location">ESCOLHER CIDADE</string>
    <string name="category">CATEGORIA</string>
    <string name="add_service">CADASTRAR SERVIÇO</string>
    <string name="service_in">Serviços em</string>
    <string name="seus_amigos_recomendam">Seus amigos avaliaram</string>
    <string name="change_password">Alterar senha</string>
    <string name="my_services">MEUS SERVIÇOS</string>
    <string name="logout">Sair</string>
    <string name="no_services">Sem serviços para recomendar</string>
    <string name="no_services_registred">Sem serviços cadastrados</string>
    <string name="evaluate">Avaliação</string>
    <string name="details">Detalhes</string>
    <string name="comment">Comentário</string>
    <string name="food">Alimentação</string>
    <string name="animals">Animais</string>
    <string name="classes">Aulas</string>
    <string name="automotive">Automotivo</string>
    <string name="beauty_welfare">Beleza e bem estar</string>
    <string name="house_building">Casa e construção</string>
    <string name="communication_art">Comunicação e artes</string>
    <string name="consultancy">Consultoria</string>
    <string name="delivery">Delivery</string>
    <string name="events_music">Eventos e Música</string>
    <string name="health">Saúde</string>
    <string name="technology">Tecnologia</string>
    <string name="transport">Transporte</string>
    <string name="security">Segurança</string>
    <string name="Other">Outros</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="action_url">Nosso site</string>

</resources>