<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.addvisor.MainActivity" >

    <item
        android:id="@+id/menu_options"
        android:icon="@drawable/option"
        android:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_url"
                android:orderInCategory="100"
                android:title="@string/action_url"
                app:showAsAction="never"/>
            <item
                android:id="@+id/logout"
                android:orderInCategory="100"
                android:title="@string/logout"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>