<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/image_button_main_buscar"
            style="@style/TextoNegrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_label"
            android:background="@drawable/box_menu"
            android:drawableLeft="@drawable/lupa"
            android:paddingLeft="@dimen/margem_padding_icon"
            android:text="@string/search"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/image_button_main_cadastrar"
            style="@style/TextoNegrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_widget"
            android:background="@drawable/box_menu"
            android:drawableLeft="@drawable/notebook"
            android:drawablePadding="@dimen/margem_borda"
            android:paddingLeft="@dimen/margem_padding_icon"
            android:text="@string/add_service"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/image_button_main_meus_servicos"
            style="@style/TextoNegrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_widget"
            android:background="@drawable/box_menu"
            android:drawableLeft="@drawable/business"
            android:paddingLeft="@dimen/margem_padding_icon_2"
            android:text="@string/my_services"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/image_button_main_meus_favoritos"
            style="@style/TextoNegrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_widget"
            android:background="@drawable/box_menu"
            android:drawableLeft="@drawable/favorite"
            android:paddingLeft="@dimen/margem_padding_icon_2"
            android:text="@string/favoritos"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/button_location"
        style="@style/TextoNegrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:contentDescription="@string/location"
        android:drawableLeft="@drawable/pin"
        android:drawablePadding="@dimen/margem_big_borda"
        android:text="@string/location"
        android:textColor="@color/text_action_bar" />

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_layout_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margem_image"
        android:contentDescription="@string/app_name"
        android:src="@drawable/euconfio_small" />

</RelativeLayout>