<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.addvisor.activities.CreateAccountActivity" >

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/euconfio_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/euconfio_small" />

        <EditText
            android:id="@+id/create_user_name"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margem_label"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/create_user_email"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >
        </EditText>

        <EditText
            android:id="@+id/create_user_phone"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/create_user_password"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >
        </EditText>

        <EditText
            android:id="@+id/create_user_confirm_password"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >
        </EditText>

        <Spinner
            android:id="@+id/spinner_states_create_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_edit_text" />

        <Spinner
            android:id="@+id/spinner_cities_create_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/search_cities_create_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_widget"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/city"
            android:inputType="text" >
        </EditText>

        <Button
            android:id="@+id/button_create_sing_up"
            style="@style/TextoNegrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margem_button"
            android:layout_marginTop="@dimen/margem_button"
            android:background="@drawable/box_button"
            android:text="@string/create_account"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>