<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.addvisor.activities.EditActivityAccount" >

    <LinearLayout
        android:id="@+id/linear_layout_fiels_user_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/euconfio_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/euconfio_small" />

        <EditText
            android:id="@+id/edit_password"
             style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_new_password"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_confirm_passowrd"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_widget"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

		<Button
		    android:id="@+id/button_change_password"
		    style="@style/TextoNegrito"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/box_button"
		    android:text="@string/update"
		    android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>