<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.addvisor.activities.EditActivityAccount" >

    <LinearLayout
        android:id="@+id/linear_layout_fiels_user_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/euconfio_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/euconfio_small" />

        <EditText
            android:id="@+id/edit_text_name"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margem_label"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_text_phone"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_text_email"
            style="@style/TextoNegrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_widget"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Spinner
            android:id="@+id/spinner_states_edit_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_edit_text" />

        <Spinner
            android:id="@+id/spinner_cities_edit_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_edit_password"
            style="@style/TextoNegrito"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/space_widget"
            android:background="@drawable/box_button"
            android:text="@string/password"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linear_layout_buttons_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/space_widget"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/button_apply"
                style="@style/TextoNegrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/box_button"
                android:text="@string/update"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_delete"
                style="@style/TextoNegrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/box_button"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>