<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linear_layout_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_dark"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageview_card_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margem_big_borda"
            android:layout_marginLeft="@dimen/margem_big_borda"
            android:layout_marginTop="@dimen/margem_big_borda"
            android:contentDescription="@string/information_service"
            android:src="@drawable/business" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margem_big_borda"
            android:layout_marginLeft="@dimen/margem_widget_horizontal"
            android:layout_marginTop="@dimen/margem_big_borda" >

            <TextView
                android:id="@+id/textview_name_service"
                style="@style/TextoNegrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_service_minor"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margem_borda" 
                android:layout_below="@+id/textview_name_service" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_action_bar"
        android:layout_marginTop="@dimen/margem_borda"
        android:background="@color/yellow_light"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/texview_description_service"
            style="@style/Texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margem_big_borda"
            android:layout_marginTop="@dimen/margem_big_borda"
            android:text="@string/description"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/texview_address_service"
            style="@style/Texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margem_big_borda"
            android:layout_marginTop="@dimen/margem_big_borda"
            android:text="@string/address"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textview_phone_service"
            style="@style/Texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margem_big_borda"
            android:layout_marginLeft="@dimen/margem_big_borda"
            android:layout_marginTop="@dimen/margem_big_borda"
            android:text="@string/phone"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_body"
        android:layout_marginTop="@dimen/margem_big_borda"
        android:background="@null"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageButton
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/phone"
            android:src="@drawable/call" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/favoritos"
            android:src="@drawable/heart" />

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/evaluate"
            android:src="@drawable/info" />

        <ImageButton
            android:id="@+id/evaluate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/evaluate"
            android:src="@drawable/star" />
    </LinearLayout>

</RelativeLayout>